# hw_5

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
core/include/: canvas.h  editor.h  iview.h  model.h
core/src/: canvas.cpp  editor.cpp  model.cpp
document/include/: document.h  document_manager.h
document/src/: document.cpp  document_manager.cpp
primitives/include/: circle.h  line.h  rectangle.h  shape.h
primitives/src/: circle.cpp  line.cpp  rectangle.cpp  shape.cpp
src/: main.cpp
tests/: tests.cpp
